cho button thoat sang ben phai

--- a/src/app/personnels/info-person/contract/contract.component.html
+++ b/src/app/personnels/info-person/contract/contract.component.html
@@ -56,10 +56,10 @@
 <modal #modalContract size='lg' cssClass="my-modal-lg" backdrop="false">
 
   <modal-header>
-    <div class="action-form mgb-i-10">
+    <div class="action-form mgb-i-10 text-right">
       <button (click)="closeModal(modalContract)">Thoát</button>
     </div>
-    <h3 class="text-center">Thông tin hợp đồng </h3>
+    <h3 class="text-center ">Thông tin hợp đồng </h3>
     <div *ngIf="message.condition && formNotValid " [ngClass]="'alert alert-'+ message.type">
       {{message.content}}
     </div>
