--- a/src/app/personnels/info-person/emulation-title/emulation-title.component.html
+++ b/src/app/personnels/info-person/emulation-title/emulation-title.component.html
@@ -51,7 +51,7 @@
 <modal #emulationTitle size='lg' cssClass="my-modal-lg" backdrop="false">
 
   <modal-header>
-    <div class="action-form mgb-i-10">
+    <div class="action-form mgb-i-10 text-right">
       <button (click)="closeModal(emulationTitle)">Thoát</button>
     </div>
     <h3 class="text-center">Thông tin danh hiệu thi đua</h3>
