--- a/src/app/personnels/info-person/language-teachnoly-politic/info-technology/info-technology.component.html
+++ b/src/app/personnels/info-person/language-teachnoly-politic/info-technology/info-technology.component.html
@@ -48,7 +48,7 @@
 <modal #technologyModal size='lg' cssClass="my-modal-lg" backdrop="false">
 
   <modal-header>
-    <div class="action-form mgb-i-10">
+    <div class="action-form mgb-i-10 text-right">
       <button (click)="closeModal(technologyModal)">Thoát</button>
     </div>
     <h3 class="text-center">Thông tin trình độ tin học  </h3>
