--- a/src/app/personnels/info-person/party-union/party-union.component.html
+++ b/src/app/personnels/info-person/party-union/party-union.component.html
@@ -139,7 +139,7 @@
 <!--modal qua trinh hoat dong dang-->
 <modal #modalActionParty size="lg" [cssClass]="cssClassModal" backdrop="false">
   <div class="modal-header">
-    <div class="action-form">
+    <div class="action-form text-right">
       <button (click)="closeModal(modalActionParty)" class="mgb-20">Thoát</button>
     </div>
     <h3 class="text-center"> Quá trình hoạt động Đảng</h3>
@@ -209,7 +209,7 @@
 <!--modal qua trinh hoat dong Doan-->
 <modal #modalUnion size='lg' cssClass="my-modal-lg" backdrop="false">
   <div class="modal-header">
-    <div class="action-form">
+    <div class="action-form text-right">
       <button (click)="closeModal(modalUnion)" class="mgb-20">Thoát</button>
     </div>
     <h3 class="text-center">Quá trình hoạt động Đoàn</h3>
@@ -279,7 +279,7 @@
 <!--modal qua trinh hoat dong Doan-->
 <modal #modalGroup size='lg' cssClass="my-modal-lg" backdrop="false">
   <div class="modal-header">
-    <div class="action-form">
+    <div class="action-form text-right">
       <button (click)="closeModal(modalGroup)" class="mgb-20">Thoát</button>
     </div>
     <h3 class="text-center">Quá trình hoạt động Công Đoàn  </h3>
