--- a/src/app/personnels/info-person/process-train/train.component.html
+++ b/src/app/personnels/info-person/process-train/train.component.html
@@ -123,7 +123,7 @@
 <modal #trainLongTimeModal size='lg' cssClass="my-modal-lg" backdrop="false">
 
   <modal-header>
-    <div class="action-form mgb-i-10">
+    <div class="action-form mgb-i-10 text-right">
       <button (click)="closeModal(trainLongTimeModal)">Thoát</button>
     </div>
     <h3 class="text-center">Thông tin quá trình đào tạo dài hạn </h3>
@@ -257,7 +257,7 @@
 <modal #trainShortTimeModal size='lg' cssClass="my-modal-lg" backdrop="false">
 
   <modal-header>
-    <div class="action-form mgb-i-10">
+    <div class="action-form mgb-i-10 text-right">
       <button (click)="closeModal(trainShortTimeModal)">Thoát</button>
     </div>
     <h3 class="text-center">Thông tin quá trình đào tạo ngắn hạn</h3>
