--- a/src/app/personnels/info-person/salary-brief/salary-brief.component.html
+++ b/src/app/personnels/info-person/salary-brief/salary-brief.component.html
@@ -63,7 +63,7 @@
 <modal #modalSalary size='lg' cssClass="my-modal-lg" backdrop="false">
 
   <modal-header>
-    <div class="action-form mgb-i-10">
+    <div class="action-form mgb-i-10 text-right">
       <button (click)="closeModal(modalSalary)">Thoát</button>
     </div>
     <h3 class="text-center">Thông tin lương </h3>
