--- a/src/app/personnels/info-person/senimar-newpaper/senimar-newpaper.component.html
+++ b/src/app/personnels/info-person/senimar-newpaper/senimar-newpaper.component.html
@@ -124,7 +124,7 @@
 <modal #seminaModal size='lg' cssClass="my-modal-lg" backdrop="false">
 
   <modal-header>
-    <div class="action-form mgb-i-10">
+    <div class="action-form mgb-i-10 text-right">
       <button (click)="closeModal(seminaModal)">Thoát</button>
     </div>
     <h3 class="text-center">Thông tin báo cáo khoa học </h3>
@@ -206,7 +206,7 @@
 <modal #newspaperModal size='lg' cssClass="my-modal-lg" backdrop="false">
 
   <modal-header>
-    <div class="action-form mgb-i-10">
+    <div class="action-form mgb-i-10 text-right">
       <button (click)="closeModal(newspaperModal)">Thoát</button>
     </div>
     <h3 class="text-center">Thông tin bài báo khoa học </h3>
