--- a/src/app/personnels/manager-catalog/catalog-faculty/catalog-faculty.component.html
+++ b/src/app/personnels/manager-catalog/catalog-faculty/catalog-faculty.component.html
@@ -49,7 +49,7 @@
 <modal #modal size='lg' backdrop="false">
 
   <modal-header>
-    <div class="action-form mgb-i-10">
+    <div class="action-form mgb-i-10 text-right">
       <button (click)="closeModal(modal)">Thoát</button>
     </div>
     <h3 class="text-center"> Thêm khoa/phòng ban </h3>
@@ -145,7 +145,7 @@
 <modal #modalDetail size='lg' backdrop="false">
 
   <modal-header>
-    <div class="action-form mgb-i-10">
+    <div class="action-form mgb-i-10 text-right">
       <button (click)="closeModal(modalDetail)">Thoát</button>
     </div>
     <h4 class="text-center" style="text-transform: capitalize">{{titleDetail}}</h4>
@@ -213,7 +213,7 @@
 <modal #modalNewDepart size='lg' backdrop="false">
 
   <modal-header>
-    <div class="action-form mgb-i-10">
+    <div class="action-form mgb-i-10 text-right">
       <button (click)="closeModal(modalNewDepart)">Thoát</button>
     </div>
   </modal-header>
