--- a/src/app/personnels/manager-personnels/procedure-bonus/procedure-bonus.component.html
+++ b/src/app/personnels/manager-personnels/procedure-bonus/procedure-bonus.component.html
@@ -4,19 +4,11 @@
 
   <modal-header>
 
-    <div class="col-xs-12 col-sm-6 ">
-      <div class="action-form mgb-i-10 text-left">
+    <div class="col-xs-12 ">
+      <div class="action-form mgb-i-10 text-right">
         <button (click)="modalBonus.close()">Thoát</button>
       </div>
     </div>
-
-    <div class="col-xs-12 col-sm-6 ">
-      <div class="action-form mgb-i-10 text-right ">
-        <button class="btn-action" (click)="onSave()">{{positionUpdate == null?'Ghi nhận':'Cập nhật'}}</button>
-      </div>
-    </div>
-
-
 
     <div class="col-xs-12"><h3 class="text-center">{{name == 'bonus'?'Làm thủ tục khen thưởng':'Làm thủ tục kỷ luật
       '}} </h3></div>
@@ -98,6 +90,9 @@
         </div>
       </div>
     </form>
+    <div class="action-form mgb-i-10 text-right ">
+      <button class="btn-action" (click)="onSave()">{{positionUpdate == null?'Ghi nhận':'Cập nhật'}}</button>
+    </div>
   </modal-body>
 
   <modal-footer>
@@ -138,7 +133,8 @@
           <td>
             <span class="action-icon" (click)="editItem(item,1)"><i class="fa fa-edit"></i></span>
             <!--<span class="action-icon" (click)="removeItem(i,1)"><i class="fa fa-remove "></i></span>-->
-            <span class="action-icon" (click)="confirmDiaglog.open();itemDelete = item"><i class="fa fa-remove "></i></span>
+            <span class="action-icon" (click)="confirmDiaglog.open();itemDelete = item"><i
+              class="fa fa-remove "></i></span>
             <!--<span class="action-icon"><i class="fa fa-lock"></i></span>-->
           </td>
         </tr>
