--- a/src/app/personnels/manager-personnels/procedure-transfer-unit-work/procedure-transfer-unit-work.component.html
+++ b/src/app/personnels/manager-personnels/procedure-transfer-unit-work/procedure-transfer-unit-work.component.html
@@ -4,7 +4,7 @@
 <modal #modal size='lg' cssClass="my-modal-lg" backdrop="false">
 
   <modal-header>
-    <div class="action-form mgb-i-10">
+    <div class="action-form mgb-i-10 text-right">
       <button (click)="closeModal(modal)">Thoát</button>
     </div>
     <h3 class="text-center">Làm thủ tục chuyển đơn vị công tác </h3>
