--- a/src/app/personnels/manager-personnels/user-manager/user-manager.component.html
+++ b/src/app/personnels/manager-personnels/user-manager/user-manager.component.html
@@ -5,8 +5,8 @@
   <modal-header>
 
 
-    <div class="col-xs-12 text-left">
-      <div class="action-form mgb-i-10  ">
+    <div class="col-xs-12 ">
+      <div class="action-form mgb-i-10 text-right ">
         <button (click)="closeModal(modal)">Thoát</button>
       </div>
     </div>
