--- a/src/app/personnels/manager-system/arg-system/arg-backend/arg-backend.component.html
+++ b/src/app/personnels/manager-system/arg-system/arg-backend/arg-backend.component.html
@@ -65,7 +65,7 @@
 <modal #modal size='lg' backdrop="true">
 
   <modal-header>
-    <div class="action-form mgb-i-10">
+    <div class="action-form mgb-i-10 text-right">
       <button (click)="closeModal(modal)">Thoát</button>
     </div>
   </modal-header>
