--- a/src/app/personnels/info-person/academic-rank/academic-rank.component.html
+++ b/src/app/personnels/info-person/academic-rank/academic-rank.component.html
@@ -98,7 +98,7 @@
 <modal #academicRank size='lg' cssClass="my-modal-lg" backdrop="false">
 
   <modal-header>
-    <div class="action-form mgb-i-10">
+    <div class="action-form mgb-i-10 text-right">
       <button (click)="closeModal(academicRank)">Thoát</button>
     </div>
     <h3 class="text-center">Thông tin học hàm </h3>
@@ -156,7 +156,7 @@
 <modal #titleTeachers size='lg' cssClass="my-modal-lg" backdrop="false">
 
   <modal-header>
-    <div class="action-form mgb-i-10">
+    <div class="action-form mgb-i-10 text-right">
       <button (click)="closeModal(titleTeachers)">Thoát</button>
     </div>
     <h3 class="text-center">Thông tin danh hiệu nhà giáo </h3>
