--- a/src/app/personnels/info-person/bonus-discipline/bonus-discipline.component.html
+++ b/src/app/personnels/info-person/bonus-discipline/bonus-discipline.component.html
@@ -110,7 +110,7 @@
 <modal #modalBonus size='lg' cssClass="my-modal-lg" backdrop="false">
 
   <modal-header>
-    <div class="action-form mgb-i-10">
+    <div class="action-form mgb-i-10 text-right">
       <button (click)="modalBonus.close()">Thoát</button>
     </div>
     <h3 class="text-center">{{title}}</h3>
