--- a/src/app/personnels/info-person/family-relationship/family-relationship.component.html
+++ b/src/app/personnels/info-person/family-relationship/family-relationship.component.html
@@ -50,7 +50,7 @@
 <!--modal qua trinh hoat dong Doan-->
 <modal #modalFamily size='lg' cssClass="my-modal-lg" backdrop="false">
   <modal-header>
-    <div class="action-form mgb-i-10">
+    <div class="action-form mgb-i-10 text-right">
       <button (click)="closeModal(modalFamily)">Thoát</button>
     </div>
     <h3 class="text-center">Thông tin quan hệ gia đình </h3>
