--- a/src/app/personnels/info-person/foreign/foreign.component.html
+++ b/src/app/personnels/info-person/foreign/foreign.component.html
@@ -53,7 +53,7 @@
 <!--modal qua trinh hoat dong Doan-->
 <modal #modal size='lg' cssClass="my-modal-lg" backdrop="false">
   <modal-header>
-    <div class="action-form mgb-i-10">
+    <div class="action-form mgb-i-10 text-right">
       <button (click)="closeModal(modal)">Thoát</button>
     </div>
     <h3 class="text-center">Thông tin quá trình đi nước ngoài </h3>
