--- a/src/app/personnels/info-person/language-teachnoly-politic/foreign-language/foreign-language.component.html
+++ b/src/app/personnels/info-person/language-teachnoly-politic/foreign-language/foreign-language.component.html
@@ -51,7 +51,7 @@
 <modal #languageModal size='lg' cssClass="my-modal-lg" backdrop="false">
 
   <modal-header>
-    <div class="action-form mgb-i-10">
+    <div class="action-form mgb-i-10 text-right">
       <button (click)="closeModal(languageModal)">Thoát</button>
     </div>
     <h3 class="text-center">Thông tin trình độ ngoại ngữ </h3>
