--- a/src/app/personnels/info-person/science-topic/science-topic.component.html
+++ b/src/app/personnels/info-person/science-topic/science-topic.component.html
@@ -58,7 +58,7 @@
 <modal #topicModal size='lg' cssClass="my-modal-lg" backdrop="false">
 
   <modal-header>
-    <div class="action-form mgb-i-10">
+    <div class="action-form mgb-i-10 text-right">
       <button (click)="closeModal(topicModal)">Thoát</button>
     </div>
     <h3 class="text-center">Thông tin đề tài khoa học  </h3>
