--- a/src/app/personnels/info-person/thesis-guide/thesis-guide.component.html
+++ b/src/app/personnels/info-person/thesis-guide/thesis-guide.component.html
@@ -53,7 +53,7 @@
 <modal #thesisGuide size='lg' cssClass="my-modal-lg" backdrop="false">
 
   <modal-header>
-    <div class="action-form mgb-i-10">
+    <div class="action-form mgb-i-10 text-right">
       <button (click)="closeModal(thesisGuide)">Thoát</button>
     </div>
     <h3 class="text-center">Thông tin hướng dẫn luận văn, luận án </h3>
