--- a/src/app/personnels/manager-personnels/edit-personnel/edit-personnel.component.html
+++ b/src/app/personnels/manager-personnels/edit-personnel/edit-personnel.component.html
@@ -4,7 +4,7 @@
 <modal #modalEdit size='lg' cssClass="my-modal-lg" backdrop="false">
 
   <modal-header>
-    <div class="action-form mgb-i-10">
+    <div class="action-form mgb-i-10 text-right">
       <button (click)="closeModal(modalEdit)">Thoát</button>
     </div>
     <h3 class="text-center fs-18">Cập nhật thông tin tài khoản</h3>
