--- a/src/app/personnels/manager-personnels/procedure-form/procedure-form.component.html
+++ b/src/app/personnels/manager-personnels/procedure-form/procedure-form.component.html
@@ -1,6 +1,6 @@
 <modal #modal size='lg' cssClass="my-modal-lg" backdrop="false">
   <modal-header>
-    <div class="action-form mgb-i-10">
+    <div class="action-form mgb-i-10 text-right">
       <button (click)="close()">Thoát</button>
     </div>
     <h3 class="text-center">{{title}}</h3>
