--- a/src/app/personnels/manager-personnels/procedure-transfer-department/procedure-transfer-department.component.html
+++ b/src/app/personnels/manager-personnels/procedure-transfer-department/procedure-transfer-department.component.html
@@ -6,7 +6,7 @@
 <modal #modal size='lg' cssClass="my-modal-lg" backdrop="false">
 
   <modal-header>
-    <div class="action-form mgb-i-10">
+    <div class="action-form mgb-i-10 text-right">
       <button (click)="closeModal(modal)">Thoát</button>
     </div>
     <h3 class="text-center">Làm thủ tục chuyển khoa, phòng ban </h3>
