--- a/src/app/personnels/manager-system/arg-system/arg-fontend/arg-fontend.component.html
+++ b/src/app/personnels/manager-system/arg-system/arg-fontend/arg-fontend.component.html
@@ -60,7 +60,7 @@
 <modal #modal size='lg' backdrop="false">
 
   <modal-header>
-    <div class="action-form mgb-i-10">
+    <div class="action-form mgb-i-10 text-right">
       <button (click)="closeModal(modal)">Thoát</button>
     </div>
   </modal-header>
