danh muc danh toc danh muc quoc gia hoan thah

--- a/src/app/components/headers/header-2/header-2.component.html
+++ b/src/app/components/headers/header-2/header-2.component.html
@@ -47,7 +47,7 @@
 <modal #changePassModal size='sm' cssClass="my-modal-login" backdrop="false">
 
   <modal-header>
-    <div class="action-form mgb-i-10">
+    <div class="action-form mgb-i-10 text-right">
       <button class="btn btn-default" (click)="closeModal(changePassModal)">Thoát</button>
     </div>
     <h3 class="text-center">Thay đổi mật khẩu</h3>
