--- a/src/app/personnels/manager-system/arg-system/arg-fontend/arg-fontend.component.html
+++ b/src/app/personnels/manager-system/arg-system/arg-fontend/arg-fontend.component.html
@@ -47,8 +47,8 @@
       </td>
     </tr>
 
-    <tr>
-      <td colspan="6" class="footer-table-pager">
+    <tr class="footer-table-pager">
+      <td colspan="6" >
         <mfBootstrapPaginator></mfBootstrapPaginator>
       </td>
     </tr>
