--- a/src/app/components/tabs/tab-left/tab-left.component.html
+++ b/src/app/components/tabs/tab-left/tab-left.component.html
@@ -1,4 +1,5 @@
-<div id="tab-left" class="hidden-xs">
+<!--class="hidden-xs"-->
+<div id="tab-left" class="hidden-xs" (click)="hiddenTab()" >
   <div>
     <div class="tab-left">
       <ul class="nav nav-tabs">
@@ -64,7 +65,7 @@
 <modal #loginModal size='sm' cssClass="my-modal-login" backdrop="false">
 
   <modal-header>
-    <div class="action-form mgb-i-10">
+    <div class="action-form mgb-i-10 text-right">
       <button class="btn btn-default" (click)="closeModal(loginModal)">Thoát</button>
     </div>
   </modal-header>
@@ -104,7 +105,7 @@
 <modal #forgetPass size='sm' cssClass="my-modal-login" backdrop="false">
 
   <modal-header>
-    <div class="action-form mgb-i-10">
+    <div class="action-form mgb-i-10 text-right">
       <button class="btn btn-default" (click)="closeModal(forgetPass)">Thoát</button>
     </div>
     <h3 class="text-center">Quên mật khẩu</h3>
