--- a/src/app/personnels/info-person/language-teachnoly-politic/foreign-language/foreign-language.component.html
+++ b/src/app/personnels/info-person/language-teachnoly-politic/foreign-language/foreign-language.component.html
@@ -17,7 +17,7 @@
           <th>STT</th>
           <th>Tên ngoại ngữ</th>
           <th>Kỹ năng</th>
-          <th>Chuyên nghành/chủ đề có thể giảng dạy</th>
+          <th class="session">Chuyên nghành/chủ đề có thể giảng dạy</th>
           <th class="hide-print"><span class="action-icon" (click)="openModalNew(languageModal)"><i class="fa fa-plus"></i></span></th>
         </tr>
         </thead>
