danh muc luong, ngach cong chuc

--- a/src/app/menu-app/menu-app.component.html
+++ b/src/app/menu-app/menu-app.component.html
@@ -5,8 +5,17 @@
   </li>
 </ul>
 
-<ul [ngClass]="cssClass +' menu-app '" *ngIf="native == true">
-  <li *ngFor="let item of menus;let i = index">
+<!--<ul [ngClass]="cssClass +' menu-app '" *ngIf="native == true && orderBy!=''">-->
+  <!--<li *ngFor="let item of menus | orderBy:orderBy;let i = index">-->
+    <!--<a (click)="active('menu-app-item-'+i)"-->
+       <!--[id]="'menu-app-item-'+i" routerLinkActive="active"-->
+       <!--pageScroll [pageScrollOffset]="100"-->
+       <!--[href]="item?item.href:''" [style.color]="i==0?'#8d9c00':'#fff'"-->
+       <!--style="cursor: pointer">{{item?item.title:''}}</a></li>-->
+<!--</ul>-->
+
+<ul [ngClass]="cssClass +' menu-app '" >
+  <li *ngFor="let item of menus ;let i = index">
     <a (click)="active('menu-app-item-'+i)"
        [id]="'menu-app-item-'+i" routerLinkActive="active"
        pageScroll [pageScrollOffset]="100"
