--- a/src/app/personnels/info-person/info.component.html
+++ b/src/app/personnels/info-person/info.component.html
@@ -135,7 +135,7 @@
 
 <div id="app-menu-right-info">
   <ul class="menu-app">
-    <app-menu-app [native]="true" [menus]="menu" id="menu-info"></app-menu-app>
+    <app-menu-app [native]="true" [menus]="menu" id="menu-info" [orderBy]="''"></app-menu-app>
   </ul>
 </div>
 
