--- a/src/app/personnels/manager-catalog/catalog-rank/catalog-rank.component.html
+++ b/src/app/personnels/manager-catalog/catalog-rank/catalog-rank.component.html
@@ -1,3 +1,239 @@
-<p>
-  catalog-rank works!
-</p>
+<!--{{catalogRanks.toArray().length}}-->
+<!--*ngIf="message.condition"-->
+
+<div class="row">
+  <div class="col-xs-12 msg" *ngIf="message.condition && itemDelete != null"
+       [ngClass]="'alert alert-'+ message.type">
+    {{message.content}}
+  </div>
+
+  <div class="col-xs-12 col-sm-12">
+    <h3 class="fs-18 text-center">Danh sách loại nghạch</h3>
+    <div class="table-responsive">
+      <table class="table table-bordered" [mfData]="catalogRanks.toArray()" #mfDetail="mfDataTable" [mfRowsOnPage]="10">
+        <thead>
+        <tr>
+          <th style="width:5%">STT</th>
+          <th style="width:70%" class="name">
+            <mfDefaultSorter by="name">Loại ngạch</mfDefaultSorter>
+          </th>
+          <th style="width:10%">
+            <span class="action-icon" (click)="openModal1('loaingach')"><i class="fa fa-plus"></i></span>
+          </th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let item of mfDetail.data;let i = index ">
+          <td (click)="openSpiece(item)">{{i+1}}</td>
+          <td class="name" (click)="openSpiece(item)">{{item.name}}</td>
+          <td style="width:10%">
+            <span class="action-icon" (click)="editItem(item,'loaingach')"><i class="fa fa-edit"></i></span>
+            <span class="action-icon" (click)="confirmDiaglog.open();itemDelete = item; modDelete = 'loaingach'"><i
+              class="fa fa-remove "></i></span>
+          </td>
+        </tr>
+        <tr class="footer-table-pager">
+          <td colspan="3">
+            <mfBootstrapPaginator></mfBootstrapPaginator>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+  <!--nhom nghach-->
+
+  <div class="col-xs-12 col-sm-12">
+    <h3 class="fs-18 text-center" *ngIf="spiceCurrent">Danh sách nhóm ngạch thuộc loại ngạch:
+      {{spiceCurrent.name}}</h3>
+    <h3 class="fs-18 text-center" *ngIf="listGroup.size() == 0 && !spiceCurrent">Danh sách nhóm ngạch thuộc loại ngạch</h3>
+    <div class="table-responsive">
+      <table class="table table-bordered" [mfData]="listGroup.toArray()" #mfGroup="mfDataTable" [mfRowsOnPage]="10">
+        <thead>
+        <tr>
+          <th style="width:5%">STT</th>
+          <th style="width:70%" class="name">
+            <mfDefaultSorter by="name">Nhóm ngạch</mfDefaultSorter>
+          </th>
+          <th style="width:10%">
+            <span *ngIf="spiceCurrent!=null" class="action-icon" (click)="openModal1('nhomngach')"><i
+              class="fa fa-plus"></i></span>
+          </th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let item of mfGroup.data;let i = index ">
+          <td (click)="openGroup(item)">{{i+1}}</td>
+          <td class="name" (click)="openGroup(item)">{{item.name}}</td>
+          <td style="width:10%">
+            <span class="action-icon" (click)="editItem(item,'nhomngach')"><i class="fa fa-edit"></i></span>
+            <span class="action-icon" (click)="confirmDiaglog.open();itemDelete = item;modDelete = 'nhomngach'"><i
+              class="fa fa-remove "></i></span>
+          </td>
+        </tr>
+        <tr class="footer-table-pager">
+          <td colspan="3">
+            <mfBootstrapPaginator></mfBootstrapPaginator>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+  <!--danh sach nghach-->
+  <div class="col-xs-12 col-sm-12">
+    <h3 class="fs-18 text-center" *ngIf="listRank.size()>0">Danh sách ngạch thuộc nhóm :
+      {{groupCurrent?groupCurrent.name:''}} của loại
+      ngạch:
+      {{spiceCurrent?spiceCurrent.name:''}}</h3>
+    <h3 class="fs-18 text-center" *ngIf="listRank.size() == 0">Danh sách ngạch thuộc nhóm
+      {{groupCurrent?groupCurrent.name:''}}</h3>
+    <div class="table-responsive">
+      <table class="table table-bordered" [mfData]="listRank.toArray()" #mfRank="mfDataTable" [mfRowsOnPage]="10">
+        <thead>
+        <tr>
+          <th style="width:5%">STT</th>
+          <th style="width:70%" class="name">
+            <mfDefaultSorter>Tên ngạch</mfDefaultSorter>
+          </th>
+          <th style="width:10%">
+            <span *ngIf="groupCurrent" class="action-icon" (click)="openModal1('ngach')"><i
+              class="fa fa-plus"></i></span>
+          </th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let item of mfRank.data;let i = index ">
+          <td>{{i+1}}</td>
+          <td class="name">{{item}}</td>
+          <td style="width:10%">
+            <span class="action-icon" (click)="editItem(item,'ngach')"><i class="fa fa-edit"></i></span>
+            <span class="action-icon" (click)="confirmDiaglog.open();itemDelete = item;modDelete = 'ngach'"><i
+              class="fa fa-remove "></i></span>
+          </td>
+        </tr>
+        <tr class="footer-table-pager">
+          <td colspan="3">
+            <mfBootstrapPaginator></mfBootstrapPaginator>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+  <!--danh sach bac-->
+  <div class="col-xs-12 col-sm-12">
+    <h3 class="fs-18 text-center" *ngIf="level.size()>0">Danh sách bậc và hệ số lương thuộc nhóm :
+      {{groupCurrent?groupCurrent.name:''}} của loại ngạch:
+      {{spiceCurrent?spiceCurrent.name:''}}</h3>
+    <h3 class="fs-18 text-center" *ngIf="level.size() == 0">Danh sách bậc và hệ số lương</h3>
+    <div class="table-responsive">
+      <table class="table table-bordered" [mfData]="level.toArray()" #mfLevel="mfDataTable" [mfRowsOnPage]="10">
+        <thead>
+        <tr>
+          <th style="width:5%">STT</th>
+          <th class="name">
+            <mfDefaultSorter by="name">Bậc</mfDefaultSorter>
+          </th>
+          <th class="name">
+            <mfDefaultSorter by="salary">Hệ số lương</mfDefaultSorter>
+          </th>
+          <th style="width:10%">
+            <span class="action-icon" *ngIf="groupCurrent" (click)="openModal1('bac')"><i class="fa fa-plus"></i></span>
+          </th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let item of mfLevel.data;let i = index ">
+          <td>{{i+1}}</td>
+          <td class="name">{{item.name}}</td>
+          <td class="name">{{item.salary}}</td>
+          <td style="width:10%">
+            <span class="action-icon" (click)="editItem(item,'bac')"><i class="fa fa-edit"></i></span>
+            <span class="action-icon" (click)="confirmDiaglog.open();itemDelete = item;modDelete = 'bac'"><i
+              class="fa fa-remove "></i></span>
+          </td>
+        </tr>
+        <tr class="footer-table-pager">
+          <td colspan="3">
+            <mfBootstrapPaginator></mfBootstrapPaginator>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+</div>
+
+
+<modal #modal size='lg' backdrop="true">
+  <modal-header>
+    <div class="action-form mgb-i-10 text-right">
+      <button (click)="closeModal(modal)">Thoát</button>
+    </div>
+    <h3 class="text-center">{{modelCreate1.title}}</h3>
+    <div *ngIf="message.condition"
+         [ngClass]="'alert alert-'+ message.type">
+      {{message.content}}
+    </div>
+  </modal-header>
+  <modal-body>
+    <form action="" class="mgb-i-10">
+      <div class="row">
+        <div class="col-xs-12" *ngIf="modelCreate1.type != 'bac'">
+          <div class="item-control">
+            <label>{{modelCreate1.label}}</label>
+            <input name="inputData" class="form-control" [(ngModel)]="inputData" style="width: 100%!important;"/>
+          </div>
+          <div class="error fs-13" *ngIf="msgCreate1 != ''">
+            {{msgCreate1}}
+          </div>
+        </div>
+
+
+        <!--them bac va he so luong-->
+        <div class="col-xs-12" *ngIf="modelCreate1.type == 'bac'">
+
+          <div class="item-control">
+            <label>{{modelCreate1.label}}</label>
+            <input name="levelData" type="number" min="1" class="form-control" [(ngModel)]="levelData"
+                   style="width: 100%!important;"/>
+          </div>
+          <div class="error fs-13" *ngIf="msgCreate1!= ''">
+            {{msgCreate1}}
+          </div>
+          <div class="item-control">
+            <label>{{modelCreate1.label2}}</label>
+            <input name="inputData" type="number" min="0" class="form-control" [(ngModel)]="salaryData"
+                   style="width: 100%!important;"/>
+          </div>
+          <div class="error fs-13" *ngIf="msgCreate2 != ''">
+            {{msgCreate2}}
+          </div>
+
+        </div>
+
+      </div>
+    </form>
+  </modal-body>
+
+  <modal-footer>
+    <button class="btn-action"
+            (click)="onSave()">{{positionUpdate == null?'Thêm':'Cập nhật'}}
+    </button>
+  </modal-footer>
+
+</modal>
+
+
+<app-alert-confirm #confirmDiaglog (onAction)="confirm($event)"></app-alert-confirm>
+
+
+
+
+
+
