--- a/src/app/personnels/manager.component.html
+++ b/src/app/personnels/manager.component.html
@@ -12,7 +12,7 @@
 
   <div id="app-menu-right">
     <ul class="menu-app">
-      <app-menu-app [native]="native" [menus]="menu" id="menu-info"></app-menu-app>
+      <app-menu-app [native]="native" [menus]="menu" id="menu-info"  [orderBy]="'title'"></app-menu-app>
     </ul>
   </div>
 
