--- a/src/app/personnels/search-statistic/search/search.component.html
+++ b/src/app/personnels/search-statistic/search/search.component.html
@@ -4,7 +4,7 @@
 <modal #modal size='sm' cssClass="my-modal-lg" backdrop="true">
 
   <modal-header>
-    <div class="action-form mgb-i-10">
+    <div class="action-form mgb-i-10 text-right">
       <button (click)="closeModal(modal)">Thoát</button>
     </div>
     <h3 class="text-center">Thông tin chi tiết </h3>
